--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-square",
-  "version": "2.4.0",
-  "homepage": "",
+  "version": "2.5.0",
+  "homepage": "https://github.com/yuelau/vue-square",
   "bugs": {},
   "repository": {},
   "description": "one vue square componet test",
