--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-square",
-  "version": "2.5.0",
+  "version": "2.6.0",
   "homepage": "https://github.com/yuelau/vue-square",
   "bugs": {},
   "repository": {},
@@ -25,5 +25,6 @@
   ],
   "author": "yuelau",
   "contributors": [],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
